After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775996 - Segfault when starting measurement on Wayland
Segfault when starting measurement on Wayland
Status: RESOLVED FIXED
Product: gnome-battery-bench
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME battery bench maintainer(s)
GNOME battery bench maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-12-12 16:33 UTC by Christian Kellner
Modified: 2017-01-13 10:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Only setup the 'stop-shortcut' when running on X11 (1.46 KB, patch)
2016-12-12 16:40 UTC, Christian Kellner
committed Details | Review

Description Christian Kellner 2016-12-12 16:33:13 UTC
When starting a measurement by hitting "Start" gnome-battery-bench crashes on Wayland:

  • #0 XGetModifierMapping
    at ModMap.c line 41
  • #1 get_grab_modifiers
  • #2 on_start_button_clicked

Comment 1 Christian Kellner 2016-12-12 16:40:49 UTC
Created attachment 341832 [details] [review]
Only setup the 'stop-shortcut' when running on X11

When running on Wayland (i.e. non-X11) the attempt to setup the
stop-shortcut, using X11 specific functions, will lead to a crash.
Therefore this disables the setup of the shortcut on non-X11.
Comment 2 Owen Taylor 2017-01-12 14:17:57 UTC
Review of attachment 341832 [details] [review]:

I'd probably have put the check inside the functions, but this looks fine.
Comment 3 Christian Kellner 2017-01-13 10:02:48 UTC
Attachment 341832 [details] pushed as b89dad6 - Only setup the 'stop-shortcut' when running on X11