Only setup the 'stop-shortcut' when running on X11

When running on Wayland (i.e. non-X11) the attempt to setup the
stop-shortcut, using X11 specific functions, will lead to a crash.
Therefore this disables the setup of the shortcut on non-X11.

https://bugzilla.gnome.org/show_bug.cgi?id=775996